language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/return_with_borrowed_loc_invalid.exp
error[E07004]: invalid return of locally borrowed state
  ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/return_with_borrowed_loc_invalid.move:7:9
  │
7 │         &x
  │         ^^
  │         │
  │         Invalid return. Local variable 'x' is still being borrowed.
  │         It is still being borrowed by this reference

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/return_with_borrowed_loc_invalid.move:13:9
   │
13 │         copy y
   │         ^^^^^^
   │         │
   │         Invalid return. Local variable 'x' is still being borrowed.
   │         It is still being borrowed by this reference

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/return_with_borrowed_loc_invalid.move:21:9
   │
20 │         let u = &y.u;
   │                 ---- It is still being borrowed by this reference
21 │         move u
   │         ^^^^^^ Invalid return. Local variable 's' is still being borrowed.

error[E07004]: invalid return of locally borrowed state
   ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/return_with_borrowed_loc_invalid.move:29:9
   │
29 │         copy u
   │         ^^^^^^
   │         │
   │         Invalid return. Local variable 's' is still being borrowed.
   │         It is still being borrowed by this reference

